force-app/main/default/objects/Cycle_Medication__c/Cycle_Medication__c.object-meta.xml
<CustomObject>
    <label>Cycle Medication</label>
    <nameField>
        <label>Cycle Medication Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cycle Medications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>