force-app/main/default/objects/Cycle_Medication__c/fields/Currently_On__c.field-meta.xml
<CustomField>
    <fullName>Currently_On__c</fullName>
    <formula>IF(
    AND(
        Medication_Start_Date__c &lt; TODAY(),
        OR(
            Medication_End_Date__c &gt; TODAY(),
            ISNULL(Medication_End_Date__c)
        )
    ),
    true,
    false
)</formula>
    <label>Currently On</label>
    <type>Checkbox</type>
</CustomField>