force-app/main/default/objects/Cycle_Medication__c/fields/Cycle_Day_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Day_Picklist__c</fullName>
    <label>Cycle Day Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day 01</fullName>
            </value>
            <value>
                <fullName>Day 02</fullName>
            </value>
            <value>
                <fullName>Day 03</fullName>
            </value>
            <value>
                <fullName>Day 04</fullName>
            </value>
            <value>
                <fullName>Day 05</fullName>
            </value>
            <value>
                <fullName>Day 06</fullName>
            </value>
            <value>
                <fullName>Day 07</fullName>
            </value>
            <value>
                <fullName>Day 08</fullName>
            </value>
            <value>
                <fullName>Day 09</fullName>
            </value>
            <value>
                <fullName>Day 10</fullName>
            </value>
            <value>
                <fullName>Day 11</fullName>
            </value>
            <value>
                <fullName>Day 12</fullName>
            </value>
            <value>
                <fullName>Day 13</fullName>
            </value>
            <value>
                <fullName>Day 14</fullName>
            </value>
            <value>
                <fullName>Day 15</fullName>
            </value>
            <value>
                <fullName>Day 16</fullName>
            </value>
            <value>
                <fullName>Day 17</fullName>
            </value>
            <value>
                <fullName>Day 18</fullName>
            </value>
            <value>
                <fullName>Day 19</fullName>
            </value>
            <value>
                <fullName>Day 20</fullName>
            </value>
            <value>
                <fullName>Day 21</fullName>
            </value>
            <value>
                <fullName>Day 22</fullName>
            </value>
            <value>
                <fullName>Day 23</fullName>
            </value>
            <value>
                <fullName>Day 24</fullName>
            </value>
            <value>
                <fullName>Day 25</fullName>
            </value>
            <value>
                <fullName>Day 26</fullName>
            </value>
            <value>
                <fullName>Day 27</fullName>
            </value>
            <value>
                <fullName>Day 28</fullName>
            </value>
            <value>
                <fullName>Day 29</fullName>
            </value>
            <value>
                <fullName>Day 30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>