force-app/main/default/objects/Cycle_Medication__c/fields/Cycle_Has_Day_1_Logged__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Has_Day_1_Logged__c</fullName>
    <formula>IF(ISBLANK(Related_Cycle__r.Day_1__c), FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cycle Has Day 1 Logged</label>
    <type>Checkbox</type>
</CustomField>