force-app/main/default/objects/Cycle_Medication__c/fields/Cycle_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Record_Type__c</fullName>
    <formula>Related_Cycle__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cycle Record Type</label>
    <type>Text</type>
</CustomField>