force-app/main/default/objects/Cycle_Medication__c/fields/Format_Colours_in_Table__c.field-meta.xml
<CustomField>
    <fullName>Format_Colours_in_Table__c</fullName>
    <formula>IF(
    AND(
        Medication_Start_Date__c  &lt;=  TODAY(),
        OR(
            Medication_End_Date__c  &gt;=  TODAY(),
            ISNULL(Medication_End_Date__c)
        )
    ),
    &quot;slds-theme_success&quot;,
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Format Colours in Table</label>
    <type>Text</type>
</CustomField>