force-app/main/default/objects/Cycle_Medication__c/fields/Invalid__c.field-meta.xml
<CustomField>
    <fullName>Invalid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows Nursing to indicate whether prescribed med is being taken by patient</description>
    <label>Invalid</label>
    <type>Checkbox</type>
</CustomField>