force-app/main/default/objects/Cycle_Medication__c/fields/Linked_Medication_Name_as_Text__c.field-meta.xml
<CustomField>
    <fullName>Linked_Medication_Name_as_Text__c</fullName>
    <formula>Medication__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linked Medication Name as Text</label>
    <type>Text</type>
</CustomField>