force-app/main/default/objects/Cycle_Medication__c/fields/Medication__c.field-meta.xml
<CustomField>
    <fullName>Medication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Medication</label>
    <referenceTo>Medication__c</referenceTo>
    <relationshipName>Patient_Medications</relationshipName>
    <type>Lookup</type>
</CustomField>