force-app/main/default/objects/Cycle_Medication__c/fields/Medication_Column__c.field-meta.xml
<CustomField>
    <fullName>Medication_Column__c</fullName>
    <label>Medication Column</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>