force-app/main/default/objects/Cycle_Medication__c/fields/Medication_Description_from_Linked_Med__c.field-meta.xml
<CustomField>
    <fullName>Medication_Description_from_Linked_Med__c</fullName>
    <formula>Medication__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Medication Description from Linked Med</label>
    <type>Text</type>
</CustomField>