force-app/main/default/objects/Cycle_Medication__c/fields/Medication_Name__c.field-meta.xml
<CustomField>
    <fullName>Medication_Name__c</fullName>
    <formula>Patients_Donors__r.LastName   &amp; &quot; - &quot; &amp;   Medication__r.Name &amp; &quot; - &quot; &amp; text(Dosage__c) &amp; text(Units__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Medication Name</label>
    <type>Text</type>
</CustomField>