force-app/main/default/objects/Cycle_Medication__c/fields/Medication_Timing__c.field-meta.xml
<CustomField>
    <fullName>Medication_Timing__c</fullName>
    <label>Medication Timing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>PM</fullName>
            </value>
            <value>
                <fullName>AM &amp; PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>