force-app/main/default/objects/Cycle_Medication__c/fields/Medication_Type__c.field-meta.xml
<CustomField>
    <fullName>Medication_Type__c</fullName>
    <label>Medication Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trigger</fullName>
            </value>
            <value>
                <fullName>FSH</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>GnRH/down reg</fullName>
            </value>
            <value>
                <fullName>Ov Stim</fullName>
            </value>
            <value>
                <fullName>Contraceptive</fullName>
            </value>
            <value>
                <fullName>Luteal support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>