force-app/main/default/objects/Cycle_Medication__c/fields/Packet_Size__c.field-meta.xml
<CustomField>
    <fullName>Packet_Size__c</fullName>
    <formula>Medication__r.Packet_Size__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Packet Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>