force-app/main/default/objects/Cycle_Medication__c/fields/Regime__c.field-meta.xml
<CustomField>
    <fullName>Regime__c</fullName>
    <label>Regime</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Once a Day</fullName>
            </value>
            <value>
                <fullName>Twice a Day</fullName>
            </value>
            <value>
                <fullName>Three times a Day</fullName>
            </value>
            <value>
                <fullName>Four Times Daily</fullName>
            </value>
            <value>
                <fullName>Once Every 2 Days</fullName>
            </value>
            <value>
                <fullName>Once Every 3 Days</fullName>
            </value>
            <value>
                <fullName>Once a Cycle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>