force-app/main/default/objects/Cycle_Medication__c/fields/Related_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Related_Cycle__c</fullName>
    <label>Related Cycle</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Cycle Medications</relationshipLabel>
    <relationshipName>Patient_Medications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>