force-app/main/default/objects/Cycle_Medication__c/fields/Related_Medication_System_ID__c.field-meta.xml
<CustomField>
    <fullName>Related_Medication_System_ID__c</fullName>
    <formula>VALUE(Medication__r.Medication_System_ID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Medication System ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>